fixed overflowing definitely, and added landscape queries

--- a/src/components/Contact/Contact.css
+++ b/src/components/Contact/Contact.css
@@ -1,12 +1,19 @@
+.contact-container {
+	width: 100%;
+	max-width: 100vw;
+	height: 100%;
+	display: flex;
+}
+
 /******************* CONTACT HEADER ***************/
 
 .contact-header {
-	flex: 1;
 	display: flex;
 	justify-content: center;
 	align-items: center;
 	height: 100%;
 	margin: 5em auto;
+	width: 100%;
 }
 
 .contact-title {
@@ -89,6 +96,26 @@
 	}
 }
 
+@media only screen and (orientation: landscape) {
+	.contact-title {
+		margin-top: 3em;
+		margin-bottom: 2em;
+		width: 175px;
+		height: 70px;
+	}
+	.contact-title::after {
+		width: 170px;
+		height: 65px;
+	}
+	.contact-title::before {
+		width: 500%;
+		height: 500%;
+	}
+	.contact-item {
+		gap: 2em;
+	}
+}
+
 /********************** LEFT CONTACT SECTION ******************/
 
 .contact-wrapper {
@@ -96,7 +123,7 @@
 	width: 100%;
 	max-width: 100vw;
 	display: grid;
-	grid-template-columns: repeat(auto-fit, minmax(400px, 1fr));
+	grid-template-columns: repeat(auto-fit, minmax(350px, 1fr));
 	grid-auto-rows: auto;
 }
 
@@ -127,7 +154,7 @@
 	align-items: center;
 	gap: 1em;
 	margin-bottom: 1em;
-	width: clamp(350px, 80%, 60%);
+	width: clamp(300px, 80%, 60%);
 }
 
 .contact-section-item span {
@@ -299,6 +326,7 @@
 
 .dark-mode-fields {
 	background-color: var(--color-black);
+	color: var(--bg-color);
 }
 
 .contact-form label {
