--- a/src/components/Home/Home.css
+++ b/src/components/Home/Home.css
@@ -3,7 +3,7 @@
 	width: 100%;
 	max-width: 100vw;
 	display: grid;
-	grid-template-columns: repeat(auto-fit, minmax(400px, 1fr));
+	grid-template-columns: repeat(auto-fit, minmax(350px, 1fr));
 	grid-auto-rows: auto;
 }
 
