--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -9,7 +9,7 @@
 	justify-content: space-evenly;
 	background-color: var(--bg-color);
 	z-index: 999999;
-	height: 8vh;
+	height: 60px;
 	box-shadow: 0 0 20px rgba(0, 0, 0, 0.15);
 }
 
@@ -24,7 +24,7 @@
 	justify-content: space-evenly;
 	background-color: var(--bg-color);
 	z-index: 999999;
-	height: 8vh;
+	height: 60px;
 	box-shadow: 0 0 20px rgba(255, 255, 255, 0.15);
 }
 
