--- a/src/components/Sidebar/Sidebar.css
+++ b/src/components/Sidebar/Sidebar.css
@@ -1,6 +1,6 @@
 .navbar-container {
 	height: 6vh;
-	width: 100%;
+	width: 100vw;
 	position: fixed;
 	background-color: var(--bg-color);
 	box-shadow: 0 0 20px rgba(0, 0, 0, 0.15);
