--- a/src/components/Works/Works.css
+++ b/src/components/Works/Works.css
@@ -139,6 +139,25 @@
 	}
 }
 
+@media only screen and (orientation: landscape) {
+	.works-title {
+		margin-bottom: 2em;
+		width: 260px;
+		height: 70px;
+	}
+	.works-title::after {
+		width: 255px;
+		height: 65px;
+	}
+	.works-title::before {
+		width: 500%;
+		height: 500%;
+	}
+	.works-item {
+		gap: 2em;
+	}
+}
+
 /******************** WORKS BOTTOM *********************/
 
 .works-bottom {
@@ -189,6 +208,7 @@
 	height: 100%;
 	background-color: rgba(0, 0, 0, 0.9);
 	display: flex;
+	flex: 1;
 	justify-content: space-around;
 	align-items: center;
 	flex-direction: column;
@@ -205,7 +225,7 @@
 }
 
 .works-modal-text {
-	flex: 1;
+	flex: 2;
 	width: 100%;
 	padding: 1em 2em;
 	text-align: center;
@@ -213,7 +233,7 @@
 }
 
 .works-modal h3 {
-	font-size: clamp(18px, 2vw, 25px);
+	font-size: clamp(18px, 2.8vw, 25px);
 	padding: 1.5em;
 }
 
@@ -243,7 +263,13 @@
 
 @media screen and (max-width: 600px) {
 	.works-modal h3 {
-		padding: 0.8em;
+		padding: 0.5em;
+	}
+	.works-modal-text {
+		padding-bottom: 0.5em;
+	}
+	.works-icons {
+		margin-top: -12px;
 	}
 	.works-modal i {
 		font-size: 20px;
